--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -67,7 +67,7 @@
         <p class="card-text">Review: <%= review.body %></p>
         <form
           class="d-inline"
-          action="/campgrounds/<%=campground._id%>/review/<%=review._id%>?_method=DELETE"
+          action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
           method="POST"
         >
           <button class="btn-sm btn-danger">Delete</button>
