partially added auth

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,22 @@
 <% layout('layouts/boilerplate') %>
-  <body>
-    <h1>Inside home.ejs In Yelp Camp</h1>
-  </body>
-</html>
+
+<div class="card bg-secondary border rounded-3">
+  <div class="card-header">
+    <h1>Welcome To Yelp Camp</h1>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Campgrounds</h5>
+    <p class="card-text">
+      Campgrounds offer outdoor enthusiasts a variety of experiences, from
+      serene natural settings to vibrant communal atmospheres. Whether nestled
+      in national parks or nestled along lakeshores, these spaces provide
+      opportunities for tent camping, RV adventures, or cabin stays. With
+      amenities ranging from basic fire pits to modern conveniences like showers
+      and Wi-Fi, campgrounds cater to diverse needs. Visitors can explore hiking
+      trails, cast their lines for fishing, or simply unwind amidst the beauty
+      of nature. However, it's essential to respect campground rules, practice
+      Leave No Trace principles, and prioritize safety to ensure a memorable and
+      sustainable outdoor experience for all.
+    </p>
+  </div>
+</div>
