--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -38,12 +38,12 @@
       novalidate
     >
       <div class="mb-3">
-        <label class="form-label" for="rating">Review: </label>
+        <label class="form-label" for="rating">Rating: </label>
         <input
           class="form-range"
           type="range"
           name="review[rating]"
-          id="range"
+          id="rating"
           min="1"
           max="5"
         />
@@ -70,7 +70,7 @@
           action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
           method="POST"
         >
-          <button class="btn-sm btn-danger">Delete</button>
+          <button class="btn btn-sm btn-danger">Delete</button>
         </form>
       </div>
     </div>
