--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,11 +1,12 @@
+<!-- <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark"> -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">YelpCamp</a>
+    <a class="navbar-brand" href="/campgrounds">YelpCamp</a>
     <button
       class="navbar-toggler"
       type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup"
       aria-expanded="false"
       aria-label="Toggle navigation"
@@ -17,6 +18,8 @@
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/campgrounds">Campgrounds</a>
         <a class="nav-link" href="/campgrounds/new">Add New Campground</a>
+        <a class="nav-link" href="/users/login">Login</a>
+        <a class="nav-link" href="/users/register">Register</a>
       </div>
     </div>
   </div>
