--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,4 +1,30 @@
 <% layout('layouts/boilerplate')%>
 <h1>Login</h1>
+<form action="/login" method="post" class="needs-validation" novalidate>
+  <div class="mb-3">
+    <label class="form-label" for="username">Username</label>
+    <input
+      class="form-control"
+      type="text"
+      id="username"
+      name="username"
+      placeholder="Username"
+      required
+    />
+    <div class="valid-feedback">Looks ok!</div>
+  </div>
 
-<div class="bg-dark"></div>
+  <div class="mb-3">
+    <label class="form-label" for="password">Password</label>
+    <input
+      class="form-control"
+      type="password"
+      id="password"
+      name="password"
+      placeholder="Password"
+      required
+    />
+    <div class="valid-feedback">Looks ok!</div>
+  </div>
+  <button class="btn btn-success" type="submit">Submit</button>
+</form>
