--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,3 +1,41 @@
 <% layout('layouts/boilerplate')%>
 <h1>Register</h1>
-<div class="bg-dark">n</div>
+<form action="/register" method="post" class="needs-validation" novalidate>
+  <div class="mb-3">
+    <label class="form-label" for="username">Username</label>
+    <input
+      class="form-control"
+      type="text"
+      id="username"
+      name="username"
+      placeholder="Username"
+      required
+    />
+    <div class="valid-feedback">Looks ok!</div>
+  </div>
+  <div class="mb-3">
+    <label class="form-label" for="email">Email</label>
+    <input
+      class="form-control"
+      type="email"
+      id="email"
+      name="email"
+      placeholder="Email"
+      required
+    />
+    <div class="valid-feedback">Looks ok!</div>
+  </div>
+  <div class="mb-3">
+    <label class="form-label" for="password">Password</label>
+    <input
+      class="form-control"
+      type="password"
+      id="password"
+      name="password"
+      placeholder="Password"
+      required
+    />
+    <div class="valid-feedback">Looks ok!</div>
+  </div>
+  <button class="btn btn-success" type="submit">Submit</button>
+</form>
