--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -35,7 +35,15 @@
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Add Images</label>
-        <input type="file" name="image" id="" multiple />
+        <div class="input-group mb-3">
+          <input
+            type="file"
+            class="form-control"
+            id="image"
+            name="image"
+            multiple
+          />
+        </div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
@@ -55,7 +63,6 @@
           <div class="valid-feedback">Looks ok!</div>
         </div>
       </div>
-
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
         <textarea
@@ -68,6 +75,21 @@
 <%= campground.description%></textarea
         >
         <div class="valid-feedback">Looks ok!</div>
+      </div>
+      <div class="mb-3">
+        <% campground.images.forEach((img,i) => { %>
+        <img src="<%= img.thumbnail%>" class="img-thumbnail" alt="" />
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            name="deleteImages[]"
+            value="<%= img.filename %>"
+            id="image-<%=i%>"
+          />
+          <label class="form-check-label" for="image-<%=i%>"> Delete ? </label>
+        </div>
+        <% }) %>
       </div>
       <div class="mb-3">
         <button class="btn btn-info">Update Campground</button>
