--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -32,7 +32,17 @@
         <div class="valid-feedback">Looks ok!</div>
       </div>
       <div class="mb-3">
-        <input type="file" name="image" id="" multiple />
+        <label class="form-label" for="">Upload Images</label>
+        <div class="input-group mb-3">
+          <input
+            type="file"
+            class="form-control"
+            id="image"
+            name="image"
+            multiple
+          />
+          <label class="input-group-text" for="image">Upload</label>
+        </div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
