--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,13 +1,20 @@
 <% layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/css/starabilty.css" />
-
+<script>
+  const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+  const geometry = <%-JSON.stringify(campground.geometry)%>;
+</script>
 <div class="row">
   <div class="col-6">
+    <div class="mb-3">
+      <div id="map" style="height: 200px; width: 200px"></div>
+    </div>
+
     <div id="campgroundCarousel" class="carousel slide">
       <div class="carousel-inner">
         <% campground.images.forEach((img,i) => { %>
         <div class="carousel-item <%= i===0 ? 'active' : '' %>">
-          <img src="<%=img.thumbnail%>" class="d-block w-100" alt="" />
+          <img src="<%=img.url%>" class="d-block w-100" alt="" />
         </div>
         <% }) %>
       </div>
@@ -155,3 +162,5 @@
     <% } %>
   </div>
 </div>
+
+<script src="/js/showPageMap.js"></script>
