--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,21 @@
 <% layout('layouts/boilerplate')%>
+<script>
+  const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+  const campgrounds = {features: <%-JSON.stringify(campgrounds)%>}
+</script>
 
+<div id="map" style="height: 300px; width: 100%"></div>
 <h1>All Campgrounds</h1>
 
 <% for (let campground of campgrounds){%>
 <div class="card" mb-3>
   <div class="row">
     <div class="col-md-4">
+      <% if (campground.images.length) { %>
       <img class="img-fluid" alt="" src="<%=campground.images[0].url%>" />
+      <% } else {%>
+      <img class="img-fluid" alt="" src="" />
+      <% } %>
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -23,3 +32,5 @@
   </div>
 </div>
 <% }%>
+
+<script src="/js/indexPageMap.js"></script>
