--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate')%>
-<link rel="stylesheet" href="/css/starabilty.css" />
+<link crossorigin="anonymous" rel="stylesheet" href="/css/starabilty.css" />
 <script>
   const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
   const campground = <%-JSON.stringify(campground)%>;
@@ -10,7 +10,12 @@
       <div class="carousel-inner">
         <% campground.images.forEach((img,i) => { %>
         <div class="carousel-item <%= i===0 ? 'active' : '' %>">
-          <img src="<%=img.url%>" class="d-block w-100" alt="" />
+          <img
+            crossorigin="anonymous"
+            src="<%=img.url%>"
+            class="d-block w-100"
+            alt=""
+          />
         </div>
         <% }) %>
       </div>
