--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,10 +12,14 @@
       crossorigin="anonymous"
     />
     <link
+      crossorigin="anonymous"
       href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css"
       rel="stylesheet"
     />
-    <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
+    <script
+      crossorigin="anonymous"
+      src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"
+    ></script>
   </head>
 
   <body class="d-flex flex-column vh-100">
